maze.pledge.PledgeMaze.scala.error
Erreur de compilation :
PledgeMaze:52: error: not found: value directionActuelle
    directionActuelle = dir;
    ^PledgeMaze:56: error: not found: value directionActuelle
      setDirection(directionActuelle)
                   ^